[tool.poetry]
name = "streaming-utilities"
version = "0.1.0"
description = "A set of utilities to help us manage our streaming services"
authors = ["St Mary's Church, Whitkirk <tech@whitkirkchurch.org.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = "==3.13.7"
pyairtable = "1.5.0"
click = "8.3.3"
Jinja2 = "3.1.6"
google-api-python-client = "2.194.0"
google-auth-oauthlib = "1.3.1"
boto3 = "1.43.0"
requests-toolbelt = "1.0.0"
rollbar = "1.3.0"
pytz = "2025.2"
churchsuite = {git = "https://github.com/whitkirkchurch/churchsuite-utilities.git", rev = "c268ad732f015dd58bb6791426dada3014ad00fc"}
pytest = "9.0.3"
pillow = "12.2.0"

[tool.poetry.group.dev.dependencies]
coverage = "7.13.5"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core==2.3.2"]
build-backend = "poetry.core.masonry.api"
